...
                      onClick = {
                        userViewModel.updateUser(editedUser, context)
                        isEditing = false
                      },
                      colorLevel = ColorLevel.PRIMARY,
                      enabled = validInputs,
                      testTag = "SaveButton")
                },
                cancelButton = {
                  Button(
                      text = stringResource(R.string.view_profile_screen_cancel_button),
                      onClick = { isEditing = false },
                      colorLevel = ColorLevel.SECONDARY,
                      testTag = "CancelButton")
                })
          } else {
            DisplayProfileComponent(userState) {
              // Edit Button directly in the Box
              Button(
                  text = stringResource(R.string.view_profile_screen_modify_profile_button),
                  onClick = { isEditing = true },
                  colorLevel = ColorLevel.TERTIARY,
                  testTag = "EditButton")

              val userReviews by reviewViewModel.userReviews.collectAsState()
              // Map to store the parking corresponding to each review. This is used to display the
              // parking
              // name in the review card and allow to navigate to the parking's details screen
              val reviewToParkingMap = remember { mutableStateMapOf<String, Parking>() }
...

  Box(modifier = Modifier.fillMaxSize()) {
    if (favoriteParkings.isEmpty()) {
      Text(
          text = stringResource(R.string.view_profile_screen_no_favorite_parking),
          style = MaterialTheme.typography.bodyMedium,
          modifier = Modifier.testTag("NoFavoritesMessage").padding(16.dp))
    } else {
      LazyColumn(
          modifier = Modifier.fillMaxWidth().testTag("FavoriteParkingList"),
          contentPadding = PaddingValues(16.dp)) {
            itemsIndexed(favoriteParkings) { index, parking ->
              FavoriteParkingCard(
                  navigationActions, parkingViewModel, userViewModel, parking, index)
            }
          }
...
