...
        Column(
            modifier = Modifier.padding(16.dp),
            horizontalAlignment = Alignment.CenterHorizontally) {
              Text(
                  text = firstName,
                  style = MaterialTheme.typography.headlineMedium,
                  modifier = Modifier.testTag("DisplayFirstName"))

              Text(
                  text = lastName,
                  style = MaterialTheme.typography.headlineMedium,
                  modifier = Modifier.testTag("DisplayLastName"))

              Spacer(modifier = Modifier.height(16.dp))

              ProfileImageComponent(
                  url = profilePictureUrl,
                  onClick = {},
...
